new html and css files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<div class="container">
 <header class="header">
 		<div class="logo">
 			<a href="#">
@@ -65,7 +65,7 @@
 <div class="for_whom">
 	<div class="t_for_whom">Для кого сервис</div>
 </div>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="css/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
