--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div class="container">
+<!----------------------------HEADER---------------------------->
 <header class="header">
 		<div class="logo">
 			<a href="#">
@@ -41,14 +42,14 @@
 				</a>
 			</div>
 		</div>
-
+<!----------------------------HEADER > BURGER MENU---------------------------->
 		<div class="burger">
 			<div class="burger_line"></div>
 			<div class="burger_line"></div>
 			<div class="burger_line"></div>
 		</div>
 </header>
-
+<!----------------------------INTRO---------------------------->
 <div class="intro">
 	<div class="text_intro">
 		<h1><span class="red_word">Новый</span> метод<br>привлечения подписчиков</h1>
@@ -61,10 +62,39 @@
 		<img src="img/intro.png" alt="Phone">
 	</div>
 </div>
-
+<!----------------------------FOR WHOM---------------------------->
 <div class="for_whom">
 	<div class="t_for_whom">Для кого сервис</div>
+<!----------------------------INTRO > CARDS---------------------------->
+	<div class="cards">
+		<div class="card">
+			<div class="title_card">Блогеры</div>
+			<div class="subtitle_card">Чек - листы, гайды - выдавайте за подписку на вас.</div>
+			<img class="card_img_blogger" src="img/for-whow/blogger.png" alt="Blogger">
+		</div>
+
+		<div class="card">
+			<div class="title_card">Онлайн школы</div>
+			<div class="subtitle_card">Лид магниты, и приглашения на вебинар выдавайте за подписку.</div>
+			<img class="card_img_school" src="img/for-whow/school.png" alt="School">
+		</div>
+
+		<div class="card">
+			<div class="title_card">Эксперты</div>
+			<div class="subtitle_card">Выдавайте полезные материалы, презентации только вашим подписчикам.</div>
+			<img class="card_img_expert" src="img/for-whow/expert.png" alt="Expert">
+		</div>
+	</div>
 </div>
+<!----------------------------PREVIEW---------------------------->
+<div class="t_overview">Обзор сервиса</div>
+
+<div class="video">
+	<a href="#">
+		<img src="img/preview.png" alt="">
+	</a>
+</div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="css/slick/slick.min.js"></script>
