--- a/index.html
+++ b/index.html
@@ -86,17 +86,69 @@
 		</div>
 	</div>
 </div>
-<!----------------------------PREVIEW---------------------------->
-<div class="t_overview">Обзор сервиса</div>
+<!----------------------------WHAT IS---------------------------->
+<div class="what_is">
+	<div class="what_is_text">В чём смысл</div>
+	<div class="what_is_cards">
+		<div class="what_is_card_all what_is_card_1">
+			<span class="what_is_card_number">1</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/hand.png" alt="Рука">
+		</div>
 
-<div class="video">
-	<a href="#">
-		<img src="img/preview.png" alt="">
-	</a>
+		<div class="what_is_card_all what_is_card_2">
+			<span class="what_is_card_number">2</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/phone.png" alt="Телефон">
+		</div>
+
+		<div class="what_is_card_all what_is_card_3">
+			<span class="what_is_card_number">3</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/man-1.png" alt="Человек">
+		</div>
+
+		<div class="what_is_card_all what_is_card_4">
+			<span class="what_is_card_number">4</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/hand-like.png" alt="Лайк">
+		</div>
+
+		<div class="what_is_card_all what_is_card_5">
+			<span class="what_is_card_number">5</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/man-2.png" alt="Человек">
+		</div>
+
+		<div class="what_is_card_all what_is_card_6">
+			<span class="what_is_card_number">6</span>
+			<div class="text_what_is_card">
+				<div class="title_what_is_card">У вас есть</div>
+				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+			</div>
+			<img class="what_is_card_img" src="img/what-is/smile.png" alt="Смайлик">
+		</div>
+	</div>
 </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
 <script src="css/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
 </body>
