--- a/index.html
+++ b/index.html
@@ -96,52 +96,52 @@
 				<div class="title_what_is_card">У вас есть</div>
 				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/hand.png" alt="Рука">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/hand.png" alt="Рука">
 		</div>
 
 		<div class="what_is_card_all what_is_card_2">
 			<span class="what_is_card_number">2</span>
 			<div class="text_what_is_card">
-				<div class="title_what_is_card">У вас есть</div>
-				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+				<div class="title_what_is_card">Вы делаете рекламу</div>
+				<div class="subtitle_what_is_card">Своих материалов у себя в instagram в Facebook или у блогеров</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/phone.png" alt="Телефон">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/phone.png" alt="Телефон">
 		</div>
 
 		<div class="what_is_card_all what_is_card_3">
 			<span class="what_is_card_number">3</span>
 			<div class="text_what_is_card">
-				<div class="title_what_is_card">У вас есть</div>
-				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+				<div class="title_what_is_card">Но подписчики не увеличиваются</div>
+				<div class="subtitle_what_is_card">Они забирают ваши материалы, но к вам в подписчики instagram не добавляются. Вы никак заставитьих не можете подписаться на вас</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/man-1.png" alt="Человек">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/man-1.png" alt="Человек">
 		</div>
 
 		<div class="what_is_card_all what_is_card_4">
 			<span class="what_is_card_number">4</span>
 			<div class="text_what_is_card">
-				<div class="title_what_is_card">У вас есть</div>
-				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+				<div class="title_what_is_card">Лучший прогрев аудитории</div>
+				<div class="subtitle_what_is_card">Происходит через социальные сети. Аудитория становится лояльна к более крупным покупкам</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/hand-like.png" alt="Лайк">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/hand-like.png" alt="Лайк">
 		</div>
 
 		<div class="what_is_card_all what_is_card_5">
 			<span class="what_is_card_number">5</span>
 			<div class="text_what_is_card">
-				<div class="title_what_is_card">У вас есть</div>
-				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+				<div class="title_what_is_card">TELEPORT поможет</div>
+				<div class="subtitle_what_is_card">С помощью сервиса вы создадите подписную страницу, которая может выдавать контент, за подписку на вас в instagram</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/man-2.png" alt="Человек">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/man-2.png" alt="Человек">
 		</div>
 
 		<div class="what_is_card_all what_is_card_6">
 			<span class="what_is_card_number">6</span>
 			<div class="text_what_is_card">
-				<div class="title_what_is_card">У вас есть</div>
-				<div class="subtitle_what_is_card">Чек лист, Гайд, Инструкция, Лид магнит, трипваер.</div>
+				<div class="title_what_is_card">Получайте подписчиков</div>
+				<div class="subtitle_what_is_card">Сервис подскажет с какой рекламы и с какого блогера пришли подписчики. Оптимизируйте рекламу и получайте больше клиентов</div>
 			</div>
-			<img class="what_is_card_img" src="img/what-is/smile.png" alt="Смайлик">
+			<img class="what_is_card_img_all what_is_card_img" src="img/what-is/smile.png" alt="Смайлик">
 		</div>
 	</div>
 </div>
