--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/slick/slick-theme.css">
-	<link rel="stylesheet" type="text/css" href="css/slick/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<title>transys</title>
-
 </head>
 <body>
 <div class="container">
 <!----------------------------HEADER---------------------------->
 <header class="header">
+<!----------------------------HEADER > LOGO---------------------------->
 		<div class="logo">
 			<a href="#">
 				<img src="img/logo.svg" alt="Teleport">
@@ -43,10 +42,20 @@
 			</div>
 		</div>
 <!----------------------------HEADER > BURGER MENU---------------------------->
-		<div class="burger">
-			<div class="burger_line"></div>
-			<div class="burger_line"></div>
-			<div class="burger_line"></div>
+		<div class="burger_content">
+			<div class="burger_menu">
+				<div class="burger_line"></div>
+				<div class="burger_line"></div>
+				<div class="burger_line"></div>
+			</div>
+			<div class="burger_list">
+				<ul>
+					<li><a href="#">Обзор сервиса</a></li>
+					<li><a href="#">Тарифы</a></li>
+					<li><a href="#">Сценарии</a></li>
+					<li><a href="#">FAQ</a></li>
+				</ul>
+			</div>
 		</div>
 </header>
 <!----------------------------INTRO---------------------------->
@@ -146,10 +155,228 @@
 	</div>
 </div>
 
+<!----------------------------Tariffs---------------------------->
+<div class="tariffs">
+
+	<div class="text_tariffs">Тарифы сервиса</div>
+
+	<div class="tariffs_cards">
+		<div class="tariffs_card_all tariffs_card_1">
+			<img class="tariffs_card_img" src="img/tariffs/micro.png" alt="Камень">
+			<div class="title_tariffs_card">MICRO</div>
+			<div class="price_tariffs_card">
+				<span>490&#x20bd</span>
+				<span>месяц</span>
+			</div>
+			<div class="tariffs_included_card">
+				<ul class="list_included">
+					<li class="item_included">1 страница</li>
+					<li class="item_included">Pixel Facebook</li>
+					<li class="item_included">Аналитика</li>
+				</ul>
+			</div>
+			<button class="btn_tariffs_card">Купить</button>
+		</div>
+
+		<div class="tariffs_card_all tariffs_card_2">
+			<img class="tariffs_card_img" src="img/tariffs/nano.png" alt="Камень">
+			<div class="title_tariffs_card">NANO</div>
+			<div class="price_tariffs_card">
+				<span>990&#x20bd</span>
+				<span>месяц</span>
+			</div>
+			<div class="tariffs_included_card">
+				<ul class="list_included">
+					<li class="item_included">3 страницы</li>
+					<li class="item_included">Pixel Facebook</li>
+					<li class="item_included">Аналитика</li>
+				</ul>
+			</div>
+			<button class="btn_tariffs_card">Купить</button>
+		</div>
+
+		<div class="tariffs_card_all tariffs_card_3">
+			<img class="tariffs_card_img" src="img/tariffs/mega.png" alt="Камень">
+			<div class="title_tariffs_card">MEGA</div>
+			<div class="price_tariffs_card">
+				<span>1490&#x20bd</span>
+				<span>месяц</span>
+			</div>
+			<div class="tariffs_included_card">
+				<ul class="list_included">
+					<li class="item_included">10 страниц</li>
+					<li class="item_included">Pixel Facebook</li>
+					<li class="item_included">Аналитика</li>
+				</ul>
+			</div>
+			<button class="btn_tariffs_card">Купить</button>
+		</div>
+	</div>
+</div>
+
+<div class="scripts">
+
+	<div class="scripts_text">Сценарии использования</div>
+
+	<div class="scripts_content scripts_content_1">
+		<img src="img/scripts/blogger.png" alt="Блогер" class="scripts_bloggers_img">
+		<div class="scripts_info">
+			<div class="scripts_content_span">
+			<span class="scripts_number"># 1</span>
+			<span class="scripts_title">Блогеры</span>
+			</div>
+			<div class="subtitle">
+				<ul class="subtitle_list">
+					<li class="subtitle_item">Делая взимопиар или покупая рекламу у блогера,<br>вы не знаете точное число подписчиков<br>пришедших к вам в аккаунт.</li>
+					<li class="subtitle_item">Многие блогеры присылают статистику переходов<br>на ваш аккаунт, но она бывает накручена. А так же<br>она не показывает число подписавшихся на вас.</li>
+					<li class="subtitle_item">TELEPORT страница покажет точное количество просмотров<br>подписной страницы и число подписавшихся на вас.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<div class="scripts_content scripts_content_2">
+		<img src="img/scripts/school.png" alt="Школа" class="scripts_bloggers_img">
+		<div class="scripts_info">
+			<div class="scripts_content_span">
+			<span class="scripts_number"># 2</span>
+			<span class="scripts_title">Онлайн школа</span>
+			</div>
+			<div class="subtitle">
+				<ul class="subtitle_list">
+					<li class="subtitle_item">Большинство онлайн школ делают рекламу в instagram, рекламируя свой лид - магнит/трипваер.</li>
+					<li class="subtitle_item">Трафик направляется на сайт или в мессенджеры.</li>
+					<li class="subtitle_item">С данной базой можно работать делая ретаргет и допродавать. Или делать рассылку в мессенджерах.</li>
+					<li class="subtitle_item">Но аудитория все еще холодная и не знает вас. А значит конверсия в покупку низкая.</li>
+					<li class="subtitle_item">Подписавшись на вас в instagram, аудитория следила бы за вами и прогревалась для покупки основного продукта.</li>
+					<li class="subtitle_item">Сервис TELEPORT сделает подписчиком в instagram всех, кому будет интересен ваш лид-магнит/трипваер. После подписки на вас, сервис выдаст доступ к сайту или автоворонке где подписчик сможет забрать полезные материалы.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<div class="scripts_content scripts_content_3">
+		<img src="img/scripts/expert.png" alt="Эксперт" class="scripts_bloggers_img">
+		<div class="scripts_info">
+			<div class="scripts_content_span">
+			<span class="scripts_number"># 3</span>
+			<span class="scripts_title">Эксперты</span>
+			</div>
+			<div class="subtitle">
+				<ul class="subtitle_list">
+					<li class="subtitle_item">У вас есть полезные ГАЙДЫ/ЧЕК ЛИСТЫ - вы их выдаете бесплатно или за подписку на вас.</li>
+					<li class="subtitle_item">Но пора этот процесс автоматизировать.</li>
+					<li class="subtitle_item">TELEPORT страница автоматически проверит подписался человек на вас или нет, и в случае подписки выдаст ссылку на полезный материал.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="questions">
+	<div class="questions_text">Частые вопросы</div>
+		<div class="questions_img">
+			<svg width="274" height="275" viewBox="0 0 274 275" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="274" height="275"><circle cx="137" cy="137.429" r="137" fill="white" fill-opacity="0.5"/></mask><g mask="url(#mask0)"><circle cx="4.62097" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="118.123" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="192.582" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="4.62097" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="118.123" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="192.582" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="38.2479" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="71.8739" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="105.501" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="139.128" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="172.755" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="206.381" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="240.008" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="6.43396" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="43.6635" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="80.8929" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="118.122" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="155.352" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="192.581" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="229.811" r="6.00476" fill="white" fill-opacity="0.5"/><circle cx="273.635" cy="267.041" r="6.00476" fill="white" fill-opacity="0.5"/></g></svg>
+		</div>
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">01</div>
+						<div class="questions_title">Как TELEPORT поможет мне и зачем это нужно?</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">02</div>
+						<div class="questions_title">Это безопасно? Меня не заблокируют?</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">03</div>
+						<div class="questions_title">Как быстро сервис проверяет подписался на меня человек или нет?</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">04</div>
+						<div class="questions_title">Кому подходит наш сервис?</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">05</div>
+						<div class="questions_title">Что будет с моей ссылкой, если я его не продлю?</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+
+			<div class="questions_accordion">
+				<div class="questions_active">
+					<div class="questions_active_container">
+						<div class="questions_number">06</div>
+						<div class="questions_title">Я не знаю, какую пользу давать людям и что им бесплатного дать, чтобы они на меня подписались.</div>
+					</div>
+					<div class="questions_open">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="questions_content">
+					<div class="questions_content_subtitle">Наш сервис поможет вам значительно снизить стоимость 	привлечения подписчика. Вы сэкономите ваш бюджет в 2-5 раз.</div>
+				</div>
+			</div>
+</div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
-<script src="css/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
