--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 				</a>
 			</div>
 		</div>
-<!----------------------------HEADER > BURGER MENU---------------------------->
-		<div class="burger_content">
-			<div class="burger_menu">
-				<div class="burger_line"></div>
-				<div class="burger_line"></div>
-				<div class="burger_line"></div>
+
+		<div class="burger">
+			<div class="burger_button">
+				<div class="burger_item"></div>
+				<div class="burger_item"></div>
+				<div class="burger_item"></div>
 			</div>
 			<div class="burger_list">
 				<ul>
@@ -55,8 +55,24 @@
 					<li><a href="#">Сценарии</a></li>
 					<li><a href="#">FAQ</a></li>
 				</ul>
+				<div class="logs_burger">
+					<div class="logs_burger_log_in">
+						<a href="#">
+							<img src="img/user.svg" alt="User">
+							<span>Войти</span>
+						</a>
+					</div>
+					<div class="logs_burger_reg">
+						<a href="#">
+							<img src="img/log-out.svg" alt="Log out">
+							<span>Регистрация</span>
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
+<!----------------------------HEADER > BURGER MENU---------------------------->
+
 </header>
 <!----------------------------INTRO---------------------------->
 <div class="intro">
@@ -227,9 +243,9 @@
 			</div>
 			<div class="subtitle">
 				<ul class="subtitle_list">
-					<li class="subtitle_item">Делая взимопиар или покупая рекламу у блогера,<br>вы не знаете точное число подписчиков<br>пришедших к вам в аккаунт.</li>
-					<li class="subtitle_item">Многие блогеры присылают статистику переходов<br>на ваш аккаунт, но она бывает накручена. А так же<br>она не показывает число подписавшихся на вас.</li>
-					<li class="subtitle_item">TELEPORT страница покажет точное количество просмотров<br>подписной страницы и число подписавшихся на вас.</li>
+					<li class="subtitle_item">Делая взимопиар или покупая рекламу у блогера, вы не знаете точное число подписчиков пришедших к вам в аккаунт.</li>
+					<li class="subtitle_item">Многие блогеры присылают статистику переходов на ваш аккаунт, но она бывает накручена. А так же она не показывает число подписавшихся на вас.</li>
+					<li class="subtitle_item">TELEPORT страница покажет точное количество просмотров подписной страницы и число подписавшихся на вас.</li>
 				</ul>
 			</div>
 		</div>
