--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<span class="subtitle_intro">Создайте подписную страницу, которая может<br>выдавать контент, за подписку на вас в instagram</span>
 	</div>
 
-	<button class="btn">Попробовать бесплатно</button>
+	<a href="#" class="btn_link"><button class="btn">Попробовать бесплатно</button></a>
 
 	<div class="r_img">
 		<img src="img/intro.png" alt="Phone">
@@ -191,7 +191,7 @@
 					<li class="item_included">Аналитика</li>
 				</ul>
 			</div>
-			<button class="btn_tariffs_card">Купить</button>
+			<a href="#"><button class="btn_tariffs_card">Купить</button></a>
 		</div>
 
 		<div class="tariffs_card_all tariffs_card_2">
@@ -208,7 +208,7 @@
 					<li class="item_included">Аналитика</li>
 				</ul>
 			</div>
-			<button class="btn_tariffs_card">Купить</button>
+			<a href="#"><button class="btn_tariffs_card">Купить</button></a>
 		</div>
 
 		<div class="tariffs_card_all tariffs_card_3">
@@ -225,7 +225,7 @@
 					<li class="item_included">Аналитика</li>
 				</ul>
 			</div>
-			<button class="btn_tariffs_card">Купить</button>
+			<a href="#"><button class="btn_tariffs_card">Купить</button></a>
 		</div>
 	</div>
 </div>
